carte à la Héran

--- a/TRANSCARTO_flows.Rmd
+++ b/TRANSCARTO_flows.Rmd
@@ -636,11 +636,22 @@ Contrairement aux cartes pays * pays, cartographier les flux au niveau régional
 
 Et si on esseyait de la reproduire en R ?
 
-```{r, eval = TRUE, message = FALSE, warning = FALSE, results = "hide"}
-migr <- read.csv("data/world/subregions/migrantstocks2019.csv")
-subregions <- st_read("data/world/geom/subregions.gpkg") %>% st_transform(crs)
+Pour celà, nous fabriquons des données au niveau subrégional à partir d'une clé d'aggrégations contenu dans le ficher *countries*.
+
+```{r, eval = TRUE, message = FALSE, warning = FALSE}
+knitr::kable(countries[c(0:10),c("adm0_a3_is", "label","Code2","Label2")], row.names = F, digits = 1)
 ```
 
+Géométries
+
+```{r, eval = TRUE, message = FALSE, warning = FALSE, results = "hide"}
+subregions <-
+  aggregate(countries, by = list(countries$Code2), FUN = head, 1)
+subregions <- subregions[, c("Code2", "Label2")]
+st_geometry(subregions) <-
+  st_cast(subregions$geometry, "MULTIPOLYGON")
+colnames(subregions) <- c("id", "label", "geometry")
+```
 
 ```{r, eval = TRUE, message = FALSE, warning = FALSE, results = "hide"}
 template("Subregions", "maps/subregions.png")
@@ -665,6 +676,176 @@ dev.off()
 ```
 <img src = "maps/subregions.png"></img>
 
+Données attributaires
+
+```{r, eval = TRUE, message = FALSE, warning = FALSE, results = "hide"}
+keys <- data.frame(countries[, c("adm0_a3_is", "Code2")])
+keys$geom <- NULL
+migr <- merge(x = migr,
+              y = keys,
+              by.x = "i",
+              by.y = "adm0_a3_is")
+colnames(migr)[4] <- "subreg_i"
+migr <- merge(x = migr,
+              y = keys,
+              by.x = "j",
+              by.y = "adm0_a3_is")
+colnames(migr)[5] <- "subreg_j"
+migr$id <- paste0(migr$subreg_i, "_", migr$subreg_j)
+migr2 <- aggregate(migr$fij, by = list(migr$id), FUN = sum)
+migr2$i <- sapply(strsplit(migr2$Group.1, "_"), "[", 1)
+migr2$j <- sapply(strsplit(migr2$Group.1, "_"), "[", 2)
+migr2 <- migr2[, c("i", "j", "x")]
+colnames(migr2)[3] <- "fij"
+migr2$fij <- round(migr2$fij / 1000, 0)
+```
+
+```{r, eval = TRUE, message = FALSE, warning = FALSE}
+knitr::kable(migr2[c(0:10),], row.names = F, digits = 1)
+```
+
+On ajoute au fond de carte les flux intrarégionaux
+
+```{r, eval = TRUE, message = FALSE, warning = FALSE, results = "hide"}
+flowsintra <- migr2[migr2$i == migr2$j,c("i","fij")]
+colnames(flowsintra) <- c("id","intra")
+subregions <- merge(x = subregions, y = flowsintra, by = "id")
+```
+
+```{r, eval = TRUE, message = FALSE, warning = FALSE}
+knitr::kable(subregions[c(0:10),], row.names = F, digits = 1)
+```
+
+Calcul des interactions inter régionales (A -> B) + (B -> A)
+
+```{r, eval = TRUE, message = FALSE, warning = FALSE, results = "hide"}
+migr2 <- migr2[migr2$i != migr2$j,]
+for (k in 1:length(migr2$i)) {
+  val1 <- migr2$fij[k]
+  val2 <-
+    migr2[migr2$i == migr2$j[k] & migr2$j == migr2$i[k], "fij"]
+  migr2$interaction[k] <- sum(val1, val2)
+}
+
+# Suppression des doublons
+interactions = data.frame(matrix(
+  ncol = 3,
+  nrow = 0,
+  dimnames = list(NULL, c("i", "j", "interaction"))
+))
+for (k in 1:length(migr2$i)) {
+  idi = migr2$i[k]
+  idj = migr2$j[k]
+  test = length(interactions[(interactions$i == idi &
+                                interactions$j == idj) |
+                               (interactions$i == idj & interactions$j == idi), "interaction"])
+  if (test == 0) {
+    interactions <-
+      rbind(interactions, data.frame(
+        i = idi,
+        j = idj,
+        interaction = migr2$interaction[k]
+      ))
+  }
+}
+```
+
+```{r, eval = TRUE, message = FALSE, warning = FALSE}
+knitr::kable(interactions[c(0:10),], row.names = F, digits = 1)
+```
+
+
+On élimine les petits flux
+
+```{r, eval = TRUE, message = FALSE, warning = FALSE, results = "hide"}
+threshold <- 2000
+interactions <- interactions[interactions$interaction >= threshold,]
+```
+
+Calcul des liens
+
+```{r, eval = TRUE, message = FALSE, warning = FALSE, results = "hide"}
+links <-
+  mf_get_links(
+    x = subregions,
+    df = interactions,
+    x_id = "id",
+    df_id = c("i", "j")
+  )
+```
+
+Cartographie
+
+```{r, eval = TRUE, message = FALSE, warning = FALSE, results = "hide"}
+
+template("L'Arique, un continent encore isolé dans la mondialisation", "maps/heran.png")
+
+col2 = "#4e4f4f"
+
+mf_map(
+  subregions,
+  col = "#4e4f4f",
+  border = "#3b3b3b",
+  lwd = 0.5,
+  add = TRUE
+)
+
+
+mf_map(
+  links,
+  var = "interaction",
+  col = col,
+  border = "#3b3b3b",
+  type = "prop",
+  lwd_max = 25,
+  leg_pos = "bottomleft",
+  leg_title = paste0("Migratons INTER régionales (interactions)\n(A -> B) + (B -> A)\nSeuil : ",threshold, "\nen milliers de personnes"),
+  add = TRUE
+)
+
+mf_map(
+  subregions,
+  var = "intra",
+  col = "#3b3b3b",
+  border = col,
+  lwd = 1.5,
+  type = "prop",
+  symbol = "square",
+  leg_pos = "topright",
+  leg_title = "Migrations INTRA\nrégionale nen 2019\n(en milliers)",
+  add = TRUE
+)
+
+mf_label(
+  subregions,
+  var = "intra",
+  halo = FALSE,
+  cex = sqrt(as.numeric(subregions$intra) / 12000),
+  col = col,
+  overlap = TRUE,
+  lines = FALSE
+)
+
+mf_label(
+  links,
+  var = "interaction",
+  halo = TRUE,
+  cex = 0.5,
+  col = col2,
+  bg = col,
+  r = 0.1,
+  overlap = FALSE,
+  lines = FALSE
+)
+
+dev.off()
+
+```
+
+<img src = "maps/heran.png"></img>
+
+Problème : avec seulement mapsf, on a du mal à représenter des flêches et surtout, à la fois des flêches A -> B et B -> A. La solution : Flowmapper 👍
+
 # Flowmapper
 
 flowmapper() est une fonction du package ttt (en cours de développement). 
@@ -679,8 +860,16 @@ La fonction ttt_flowmapper() prends plusieurs arguements :
 
 ## Les données
 
+Dans le package ttt, il y a des données d'exemple au niveau subrégional. Chargeons-les. 
+
 ```{r, eval = TRUE, message = FALSE, warning = FALSE, results = "hide"}
-migr <- read.csv("data/world/subregions/migrantstocks2019.csv")
+subregions <- st_read(system.file("subregions.gpkg", package="flowmapper")) %>% st_transform(crs)
+migr <- read.csv(system.file("migrantstocks2019.csv", package="flowmapper"))
+```
+
+On ne consrve que les flux importants
+
+```{r, eval = TRUE, message = FALSE, warning = FALSE, results = "hide"}
 threshold <- 1500
 migr <- migr[migr$fij >= threshold, ]
 ```
