--- a/TRANSCARTO_flows.Rmd
+++ b/TRANSCARTO_flows.Rmd
@@ -8,20 +8,19 @@ link_citations: true
   
 ---
 
-**Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.**
-
-# Les données
-
-Jeu de données sur les migrations internationales. Migration Stock at subregional level, 2019 Source : United Nations, Department of Economic and Social Affairs, Population Division (2019). [Voir](https://www.un.org/en/development/desa/population/migration/data/estimates2/estimates19.asp)
-
-<img src ="img/excel.png"></png>
+**L'objectif de cette séance est de montrer comment réaliser des cartes de flux diverses et variées à partir de données matrice pays * pays. Pour cela, le code est souvent assez verbeux. Et beaucoup de choses se font en R base. Il y a beaucoup de manipulation de données. L'idée n'est donc pas ici de commenter tout le code, mais d'expliciter une démarche. C'est à dire montrer comment on peut réaliser des cartes de flux dans R, dans une démarche traçable, partageable et reproductible.**
 
 # Les packages
+
+Avant de commencer, voici la liste des packages à installer et à charger. Les 3 packages les plus importants sont *sf*, *mapsf* et *ttt*.
 
 ```{r, eval = FALSE, message = FALSE, warning = FALSE}
 install.packages("sf")
 install.packages("remotes")
 install.packages("smoothr")
+install.packages("readxl")
+install.packages("comparator")
+install.packages("reshape2")
 library(remotes)
 install_github("riatelab/mapsf")
 install_github("tributetotobler/ttt")
@@ -31,11 +30,16 @@ install_github("tributetotobler/ttt")
 library("sf")
 library("mapsf")
 library("ttt")
+library("readxl")
+library("comparator")
+library("reshape2")
 ```
 
-# Import et mise en forme des données
+# Les données
 
-Données géométriques
+**Données géométriques**
+
+Ici, nous utilisons des données géométriques sur mesure qui permettent de coller exactement avec les données à cartographier. Il s'agit d'un fond de carte des pays du monde dont la nomenclature correspond à celle des données statistiques fournies par les nations unies. 
 
 ```{r, eval = TRUE, message = FALSE, warning = FALSE, results = "hide"}
 countries <- st_read("data/world/geom/countries.gpkg")
@@ -50,13 +54,7 @@ bbox <- st_transform(x = bbox, crs = crs)
 land <- st_union(countries)
 ```
 
-Données attributaires
-
-```{r, eval = TRUE, message = FALSE, warning = FALSE, results = "hide"}
-migr <- read.csv("data/world/fij/migr2019_T.csv")
-```
-
-Template cartographique
+Réalisation d'un template cartographique avec mapsf
 
 
 ```{r, eval = TRUE, message = FALSE, warning = FALSE}
@@ -66,9 +64,6 @@ credit = paste0(
   "Source: United Nations, Department of Economic\n",
   "and Social Affairs, Population Division (2019)"
 )
-# theme = mf_theme(x = "default", bg = "white", tab = FALSE,
-#                    pos = "center", line = 2, inner = FALSE,
-#                    fg = "#9F204270", mar = c(0,0, 2, 0),cex = 1.9)
 
 theme <- mf_theme(
   x = "default",
@@ -131,7 +126,101 @@ dev.off()
 
 <img src = "maps/template.png"></img>
 
-# Ce qu'on peut faire en R base & mapsf
+**Données attributaires**
+
+Nous utilisons un jeu de données sur les migrations internationales. Migration Stock at subregional level, 2019 Source : United Nations, Department of Economic and Social Affairs, Population Division (2019). Celui-ci est proposé au format xls. Nous l'importons et le mettons en forme via le code ci-dessous.
+
+> [Voir les données](data/world/UN_MigrantStockByOriginAndDestination_2019.xlsx)
+
+<img src ="img/excel.png"></png>
+
+Téléchargement du tableau
+
+```{r, eval = TRUE, message = FALSE, warning = FALSE, results = "hide"}
+data_url <-
+  "https://www.un.org/en/development/desa/population/migration/data/estimates2/data/UN_MigrantStockByOriginAndDestination_2019.xlsx"
+file <- "data/world/UN_MigrantStockByOriginAndDestination_2019.xlsx"
+if (!file.exists(file)) {
+  download.file(url = data_url, destfile = file)
+} 
+```
+
+Choix de la feuille et de l'année de référence
+
+```{r, eval = TRUE, message = FALSE, warning = FALSE, results = "hide"}
+sheet <- "Table 1"
+year <- 2019
+```
+
+Import et mise en forme
+
+```{r, eval = TRUE, message = FALSE, warning = FALSE, results = "hide"}
+migr <- data.frame(read_excel(file, skip = 15, sheet = sheet))
+migr <- migr[migr[, 1] == year, ]
+
+migr <- migr[!is.na(migr[, 6]), ]
+migr <-
+  subset(migr,
+         select = -c(...1, ...2, ...5, ...4, ...6, Total, Other.North, Other.South))
+colnames(migr)[1] <- "i"
+migr <- migr[order(migr[, "i"], decreasing = FALSE), ]
+for (i in 2:length(colnames(migr))) {
+  migr[, i] <- as.numeric(migr[, i])
+}
+```
+
+On affecte les codes ISO du fond du carte en ligne et en colonne
+
+```{r, eval = TRUE, message = FALSE, warning = FALSE}
+ctr <- countries[,1:3] %>% st_drop_geometry()
+ctr <- ctr[order(ctr[,"label"], decreasing =FALSE),]
+codes <- ctr$adm0_a3_is
+
+# Verification manuelle
+ctr$rows <- migr[,"i"]
+ctr$cols <- colnames(migr)[-1]
+for(i in 1:nrow(ctr)){
+  ctr$rows_test[i] = LCS(similarity = TRUE)(ctr$label[i], ctr$rows[i]) / ((nchar(ctr$label[i]) + nchar(ctr$rows[i])) / 2) * 100
+  ctr$cols_test[i] = LCS(similarity = TRUE)(ctr$label[i], ctr$cols[i]) / ((nchar(ctr$label[i]) + nchar(ctr$cols[i])) / 2) * 100
+}
+```
+
+```{r, eval = TRUE, message = FALSE, warning = FALSE}
+knitr::kable(ctr[c(0:10),], row.names = F, digits = 1)
+```
+
+```{r, eval = TRUE, message = FALSE, warning = FALSE, results = "hide"}
+rownames(migr) <- codes
+colnames(migr) <- c("i",codes)
+migr <- migr[,-1]
+```
+
+```{r, eval = TRUE, message = FALSE, warning = FALSE}
+knitr::kable(migr[c(0:15),c(0:15)], row.names = T, digits = 1)
+```
+
+On transpose la matrice
+
+```{r, eval = TRUE, message = FALSE, warning = FALSE, results = "hide"}
+migr <- t(migr)
+```
+
+Avec *reshape2*, on la convertit au format i,j,fij
+
+```{r, eval = TRUE, message = FALSE, warning = FALSE, results = "hide"}
+migr <- melt(migr)
+colnames(migr) = c("i","j","fij")
+migr <- migr[!is.na(migr$fij),]
+migr = migr[migr$fij>0,]
+migr = migr[order(migr$fij, decreasing = TRUE),]
+```
+
+```{r, eval = TRUE, message = FALSE, warning = FALSE}
+knitr::kable(migr[c(0:10),], row.names = F, digits = 1)
+```
+Tout est prêt. Avançons...
+
+# Premières explorations
 
 ## L'effet Spaghetti
 
@@ -157,6 +246,18 @@ dev.off()
 ```
 
 <img src = "maps/spaghetti.png"></img>
+
+## Filtrages et indicateurs
+
+**FRANCOISE, TU METS TES TRUCS ICI !**
+
+Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus ac commodo ante. Sed tincidunt tincidunt sollicitudin. Mauris odio orci, viverra et porttitor vitae, porta et arcu. Nam quis neque at elit accumsan fringilla. Cras rhoncus efficitur malesuada. Donec auctor, mauris sit amet mollis dignissim, purus urna ultricies ligula, non dictum sem quam in justo. Maecenas sit amet est accumsan, ullamcorper nulla luctus, efficitur diam. Aenean ac magna ut enim lacinia ultrices nec et sapien. Praesent scelerisque massa eros, vel tempus orci maximus at. Duis eget ipsum auctor, luctus ante in, egestas libero. Vestibulum vehicula ex a aliquam aliquam. Donec non efficitur risus. Aenean ut venenatis nisi, vitae iaculis nibh. Cras fermentum orci vel tempor sodales.
+
+Sed viverra ut ipsum in commodo. Quisque tempus tempus tortor ut feugiat. Morbi viverra, metus id feugiat vulputate, augue libero condimentum ex, vestibulum volutpat odio metus id arcu. Integer ullamcorper sed sapien ut sollicitudin. Ut aliquet, leo at elementum ornare, sem ante lacinia ante, ac porttitor justo arcu nec dolor. Cras porta nisl lobortis leo dignissim ullamcorper. Cras eu lorem imperdiet, malesuada risus ac, tempus neque. Integer in erat consequat, posuere sapien quis, pulvinar turpis. In sagittis cursus commodo. Praesent pellentesque commodo velit, quis suscipit dui sodales tristique. Mauris eleifend quam et odio viverra, quis suscipit ex semper. In semper id sapien id egestas. Mauris eros metus, rhoncus eu arcu convallis, sagittis tempor nunc. Pellentesque hendrerit, tortor at lacinia lacinia, neque neque interdum lacus, in finibus tortor metus et arcu. Praesent sed viverra lectus, nec elementum velit. In faucibus neque in risus ultricies cursus vel sed magna.
+
+Mauris a ante nec mi ornare egestas sit amet vel mauris. Maecenas ac dolor id dolor facilisis fermentum id a orci. Praesent sed dolor non nisl vulputate pulvinar. Donec vehicula vitae massa vel semper. Sed sit amet cursus odio. Fusce blandit ligula mollis justo consectetur, eget finibus nulla molestie. Morbi convallis nulla non mi finibus tempor. Vestibulum sagittis vitae mauris ut pulvinar. Morbi aliquam iaculis leo. Cras massa odio, commodo eu libero sit amet, dictum condimentum dolor. Donec posuere rutrum purus vitae euismod. Phasellus vel leo nec nisl varius luctus. Cras sed suscipit quam.
+
+# Vers des cartes un peu "stylées"
 
 ## Sélectionner un seul pays
 
@@ -853,10 +954,6 @@ flowmapper() est une fonction du package ttt (en cours de développement).
 ```{r, eval = TRUE, message = FALSE, warning = FALSE, results = "hide"}
 library(ttt)
 ```
-
-La fonction ttt_flowmapper() prends plusieurs arguements :
-
-...
 
 ## Les données
 
